package com.activity3app.model;

public enum FieldTypesEnum {
    String,
    Date,
    Integer,
    Boolean,
    Float
}
